--- a/inventario.html
+++ b/inventario.html
@@ -259,39 +259,32 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 15px;
-    width: 100%;
+    gap: 10px;
+    position: relative;
     flex-direction: column;
 }
-.avatar-placeholder {
-    width: 200px;
-    height: 280px;
-    background: linear-gradient(145deg,#2a2a2a,#1a1a1a);
-    border: 3px dashed var(--accent-purple);
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--accent-purple);
-    font-family: "Cinzel Decorative", serif;
-    font-size: 1.8em;
-    font-weight: 700;
-    text-shadow: 0 0 15px var(--glow-color);
-    box-shadow: 0 0 25px rgba(0,0,0,0.7), inset 0 0 10px rgba(255,255,255,0.1);
-    transition: all 0.3s ease;
-}
-.avatar-placeholder:hover {
-    transform: scale(1.02);
-    box-shadow: 0 0 35px var(--glow-color), inset 0 0 15px rgba(255,255,255,0.15);
-}
+
 .armor-side {
     display: flex;
     flex-direction: column;
     gap: 8px;
 }
-.armor-side.left { margin-right: auto; }
-.armor-side.right { margin-left: auto; }
 
+.armor-side.left,
+.armor-side.right {
+    position: relative;
+}
+
+@media (min-width: 768px) {
+    .avatar-container {
+        flex-direction: row;
+    }
+
+    .armor-side.left,
+    .armor-side.right {
+        position: static;
+    }
+}
 .equip-slot,
 .inv-slot {
     width: 55px; height: 55px;
