--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
   transform: scale(1.1);
   box-shadow: 0 0 30px #facc15dd, 0 0 40px #8f4fffcc;
 }
+
+@keyframes fadeInLeft { from { opacity: 0; transform: translateX(-40px); } to { opacity: 1; transform: translateX(0); } }
+@keyframes fadeInTop { from { opacity: 0; transform: translateY(-40px); } to { opacity: 1; transform: translateY(0); } }
+@keyframes fadeInRight { from { opacity: 0; transform: translateX(40px); } to { opacity: 1; transform: translateX(0); } }
+@keyframes fadeInUp { from { opacity: 0; transform: translateY(40px); } to { opacity: 1; transform: translateY(0); } }
+
+.animate-fade-in-left { animation: fadeInLeft 1s ease forwards; }
+.animate-fade-in-top { animation: fadeInTop 1s ease forwards; }
+.animate-fade-in-right { animation: fadeInRight 1s ease forwards; }
+.animate-fade-in-up { animation: fadeInUp 1s ease forwards; }
+
+@keyframes levitate {
+  0%, 100% { transform: translateY(0px); }
+  50% { transform: translateY(-5px); }
+}
+.float-levitate {
+  animation: levitate 4s ease-in-out infinite;
+}
 </style>
 
 </head>  
@@ -194,7 +212,63 @@
       <a href="#universo" class="btn-líquido-pulsante z-10">
   ✦ Mergulhar no Portal ✦
 </a>
-    </section>  <!-- 2. INTRODUÇÃO RÁPIDA -->  
+    </section> 
+
+
+<section id="oque-e-noheroes" class="py-20 px-6 max-w-7xl mx-auto text-center">
+  <h2 class="text-3xl md:text-4xl font-bold gradiente-noheroes cinzel mb-12">
+    O que é NoHeroes?
+  </h2>
+
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-6">
+    
+    <!-- 1. História Viva -->
+    <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md animate-fade-in-left float-levitate" style="animation-delay: 0.3s">
+      <svg class="w-10 h-10 text-[#8f4fff] mx-auto mb-4" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m0-12a2 2 0 012-2h4a2 2 0 012 2v12a2 2 0 01-2 2h-4a2 2 0 01-2-2zm0 0a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2h4a2 2 0 002-2z"/>
+      </svg>
+      <h3 class="text-lg font-bold text-[#8f4fff] mb-2">História Viva</h3>
+      <p class="text-sm text-gray-300">Você não só lê — você participa, influencia e muda o destino da narrativa.</p>
+    </div>
+
+    <!-- 2. Evolução Real -->
+    <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md animate-fade-in-top float-levitate" style="animation-delay: 0.6s">
+      <svg class="w-10 h-10 text-[#facc15] mx-auto mb-4" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.5v11m0-11a4.5 4.5 0 114.5 4.5H7.5A4.5 4.5 0 0112 6.5z" />
+      </svg>
+      <h3 class="text-lg font-bold text-[#facc15] mb-2">Evolução Real</h3>
+      <p class="text-sm text-gray-300">Tudo que você faz no mundo real influencia sua jornada dentro do portal.</p>
+    </div>
+
+    <!-- 3. Portal Criativo -->
+    <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md animate-fade-in-right float-levitate" style="animation-delay: 0.9s">
+      <svg class="w-10 h-10 text-[#8f4fff] mx-auto mb-4" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M13 10V3L4 14h7v7l9-11h-7z" />
+      </svg>
+      <h3 class="text-lg font-bold text-[#8f4fff] mb-2">Portal Criativo</h3>
+      <p class="text-sm text-gray-300">Mangás, apps, rituais, livros, games — tudo feito com estética e alma.</p>
+    </div>
+
+    <!-- 4. Mentorias e Suporte -->
+    <div class="bg-[#1c1c1c] p-6 rounded-xl shadow-md animate-fade-in-up float-levitate" style="animation-delay: 1.2s">
+      <svg class="w-10 h-10 text-[#facc15] mx-auto mb-4" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7M4 6h16v12H4z" />
+      </svg>
+      <h3 class="text-lg font-bold text-[#facc15] mb-2">Criação & Mentoria</h3>
+      <p class="text-sm text-gray-300">Desenvolvemos projetos, sites, identidades e ideias junto com você.</p>
+    </div>
+  </div>
+
+  <!-- Botão -->
+  <div class="mt-12">
+    <a href="sobre.html" class="btn-líquido-pulsante">
+      ✦ Descobrir o Portal ✦
+    </a>
+  </div>
+</section>
+
+
+ <!-- 2. INTRODUÇÃO RÁPIDA -->  
 <section id="teaser" class="py-16 px-8 max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 text-center">  
   <div onclick="window.location.href='store.html'" class="p-6 bg-[#1c1c1c] rounded-lg hover:scale-105 transition cursor-pointer">  
     <h2 class="font-bold mb-2 text-[#8f4fff]">Anime &amp; Mangá</h2>  
