Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
       <svg class="w-10 h-10 text-[#8f4fff] mx-auto mb-4" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m0-12a2 2 0 012-2h4a2 2 0 012 2v12a2 2 0 01-2 2h-4a2 2 0 01-2-2zm0 0a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2h4a2 2 0 002-2z"/>
       </svg>
-      <h3 class="text-lg font-bold text-[#8f4fff] mb-2">História Viva</h3>
-      <p class="text-sm text-gray-300">Você não só lê — você participa, influencia e muda o destino da narrativa.</p>
+      <h3 class="text-lg font-bold text-[#8f4fff] mb-2">Um Portal Multimídia</h3>
+      <p class="text-sm text-gray-300">Animes, mangás, livros, eBooks, apps. Um universo em expansão onde tudo é feito com propósito — e alma.</p>
     </div>
 
     <!-- 2. Evolução Real -->
@@ -236,8 +236,8 @@
       <svg class="w-10 h-10 text-[#facc15] mx-auto mb-4" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.5v11m0-11a4.5 4.5 0 114.5 4.5H7.5A4.5 4.5 0 0112 6.5z" />
       </svg>
-      <h3 class="text-lg font-bold text-[#facc15] mb-2">Evolução Real</h3>
-      <p class="text-sm text-gray-300">Tudo que você faz no mundo real influencia sua jornada dentro do portal.</p>
+      <h3 class="text-lg font-bold text-[#facc15] mb-2">Seu Dojo Digital</h3>
+      <p class="text-sm text-gray-300">Cada missão, leitura ou clique aqui ecoa fora da tela. Você cresce no jogo — e na vida. Um reflexo puxa o outro.</p>
     </div>
 
     <!-- 3. Portal Criativo -->
@@ -245,8 +245,8 @@
       <svg class="w-10 h-10 text-[#8f4fff] mx-auto mb-4" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" d="M13 10V3L4 14h7v7l9-11h-7z" />
       </svg>
-      <h3 class="text-lg font-bold text-[#8f4fff] mb-2">Portal Criativo</h3>
-      <p class="text-sm text-gray-300">Mangás, apps, rituais, livros, games — tudo feito com estética e alma.</p>
+      <h3 class="text-lg font-bold text-[#8f4fff] mb-2">Uma Frequência Criativa</h3>
+      <p class="text-sm text-gray-300">NoHeroes é um portal vivo onde ideias nascem, mutam, e se chocam. Uma rede para quem nunca se encaixou — mas sempre quis criar.</p>
     </div>
 
     <!-- 4. Mentorias e Suporte -->
@@ -254,8 +254,8 @@
       <svg class="w-10 h-10 text-[#facc15] mx-auto mb-4" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7M4 6h16v12H4z" />
       </svg>
-      <h3 class="text-lg font-bold text-[#facc15] mb-2">Criação & Mentoria</h3>
-      <p class="text-sm text-gray-300">Desenvolvemos projetos, sites, identidades e ideias junto com você.</p>
+      <h3 class="text-lg font-bold text-[#facc15] mb-2">A forja dos Sonhos</h3>
+      <p class="text-sm text-gray-300">Ajudamos você a tirar da mente o que vive preso há anos. Sites, projetos, marcas, ideias — aqui, a gente transforma sonhos em realidade palpável.</p>
     </div>
   </div>
 
