Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -536,6 +536,39 @@ createParticles(Math.floor(150 * ratio));   // ou qualquer quantidade desejada
 });
 
 window.addEventListener("resize", resizeCanvas);
+
+ScrollReveal().reveal('#card1', {
+    origin: 'left',
+    distance: '40px',
+    duration: 1000,
+    delay: 200,
+    easing: 'ease-in-out',
+    reset: false
+  });
+  ScrollReveal().reveal('#card2', {
+    origin: 'top',
+    distance: '40px',
+    duration: 1000,
+    delay: 400,
+    easing: 'ease-in-out',
+    reset: false
+  });
+  ScrollReveal().reveal('#card3', {
+    origin: 'right',
+    distance: '40px',
+    duration: 1000,
+    delay: 600,
+    easing: 'ease-in-out',
+    reset: false
+  });
+  ScrollReveal().reveal('#card4', {
+    origin: 'bottom',
+    distance: '40px',
+    duration: 1000,
+    delay: 800,
+    easing: 'ease-in-out',
+    reset: false
+  });
 </script>
   </body>  
 </html>  
