Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -226,37 +226,38 @@
 
   <!-- 1. Um Portal Multimídia -->
   <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#8f4fff]" id="card1">
-    <svg class="w-10 h-10 mx-auto mb-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.4">
-      <path d="M12 3C17.5 3 21 7 21 12C21 17 17.5 21 12 21C6.5 21 3 17 3 12C3 7 6.5 3 12 3ZM12 6C10 6 8.7 8 8.7 12C8.7 16 10 18 12 18C14 18 15.3 16 15.3 12C15.3 8 14 6 12 6Z" stroke-linecap="round" stroke-linejoin="round"/>
-    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10 mx-auto mb-4 text-[#a855f7]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M12 21c4.97 0 9-4.03 9-9s-4.03-9-9-9S3 7.03 3 12c0 3.31 2.69 6 6 6 .6 0 1.17-.09 1.71-.26a4.5 4.5 0 003.03-3.03c.17-.54.26-1.11.26-1.71 0-2.49-2.01-4.5-4.5-4.5S6 9.51 6 12"/>
+</svg>
     <h3 class="text-xl font-bold cinzel text-center mb-2">Um Portal Multimídia</h3>
     <p class="text-sm text-gray-300 text-center">Animes, mangás, livros, eBooks e apps — um universo em expansão onde tudo é feito com propósito e alma.</p>
   </div>
 
   <!-- 2. Seu Dojo Digital -->
   <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#39ff14]" id="card2">
-    <svg class="w-10 h-10 mx-auto mb-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.4">
-      <path d="M12 3a9 9 0 100 18 9 9 0 000-18Zm1.5 2.7c1.6.6 2.7 2.1 2.7 3.8 0 1.7-1.1 3.2-2.7 3.8M12 3c0 2-1.8 3.6-4 3.6" stroke-linecap="round" stroke-linejoin="round"/>
-    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10 mx-auto mb-4 text-[#22c55e]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M12 3a9 9 0 100 18 4.5 4.5 0 010-9 4.5 4.5 0 010-9zM12 3a4.5 4.5 0 010 9 4.5 4.5 0 010 9"/>
+  <circle cx="12" cy="7.5" r="1.5" fill="currentColor"/>
+  <circle cx="12" cy="16.5" r="1.5" fill="currentColor"/>
+</svg>
     <h3 class="text-xl font-bold cinzel text-center mb-2">Seu Dojo Digital</h3>
     <p class="text-sm text-gray-300 text-center">Cada missão, leitura ou clique aqui ecoa fora da tela. Você cresce no jogo — e na vida. Um reflexo puxa o outro.</p>
   </div>
 
   <!-- 3. Uma Frequência Criativa -->
   <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#6c5ce7]" id="card3">
-    <svg class="w-10 h-10 mx-auto mb-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.4">
-      <path d="M3 12c2-4 6-7 9-7s7 3 9 7-6 7-9 7-7-3-9-7Z" stroke-linecap="round" stroke-linejoin="round"/>
-      <path d="M3 12h18" stroke-linecap="round"/>
-    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10 mx-auto mb-4 text-[#6366f1]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M3 12c2-4 4-4 6 0s4 4 6 0 4-4 6 0"/>
+</svg>
     <h3 class="text-xl font-bold cinzel text-center mb-2">Uma Frequência Criativa</h3>
     <p class="text-sm text-gray-300 text-center">NoHeroes é um portal vivo onde ideias nascem, mutam e se chocam. Uma rede para quem nunca se encaixou — mas sempre quis criar.</p>
   </div>
 
   <!-- 4. A Forja dos Sonhos -->
   <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#facc15]" id="card4">
-    <svg class="w-10 h-10 mx-auto mb-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.4">
-      <path d="M3 17h18M12 4v13M6 17v3h12v-3" stroke-linecap="round" stroke-linejoin="round"/>
-    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10 mx-auto mb-4 text-[#facc15]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14M3 16h18M6 8h12v4H6zM12 4v2m0 0l1-1m-1 1l-1-1"/>
+</svg>
     <h3 class="text-xl font-bold cinzel text-center mb-2">A Forja dos Sonhos</h3>
     <p class="text-sm text-gray-300 text-center">Ajudamos você a tirar da mente o que vive preso há anos. Sites, projetos, ideias — aqui, transformamos sonhos em realidade palpável.</p>
   </div>
