Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -226,8 +226,9 @@
 
   <!-- 1. Um Portal Multimídia -->
   <div class="bg-[#1c1c1c] p-6 rounded-xl glow-border float-levitate text-[#8f4fff]" id="card1">
-    <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10 mx-auto mb-4 text-[#a855f7]" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
-  <path stroke-linecap="round" stroke-linejoin="round" d="M12 21c4.97 0 9-4.03 9-9s-4.03-9-9-9S3 7.03 3 12c0 3.31 2.69 6 6 6 .6 0 1.17-.09 1.71-.26a4.5 4.5 0 003.03-3.03c.17-.54.26-1.11.26-1.71 0-2.49-2.01-4.5-4.5-4.5S6 9.51 6 12"/>
+    <svg class="w-10 h-10 mx-auto mb-4 text-[#a855f7]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+  <path d="M12 2a10 10 0 100 20 1 1 0 010 2 12 12 0 110-24 1 1 0 010 2z"/>
+  <path d="M12 6a6 6 0 100 12 1 1 0 010 2 8 8 0 110-16 1 1 0 010 2z"/>
 </svg>
     <h3 class="text-xl font-bold cinzel text-center mb-2">Um Portal Multimídia</h3>
     <p class="text-sm text-gray-300 text-center">Animes, mangás, livros, eBooks e apps — um universo em expansão onde tudo é feito com propósito e alma.</p>
